# projet_big_data_cytech_25

./: .gitignore  README.md  col.txt  docker-compose.yml  pyproject.toml  rapport.txt
ex01_data_retrieval/src/main/scala/: DownloadToMinio.scala
ex02_data_ingestion/: build.sbt
ex02_data_ingestion/src/main/scala/: Branch1.scala  Branch2.scala  idk.scala
ex03_sql_table_creation/: creation.sql  insertion.sql
ex04_dashboard/: app.py  queries.py  visualisation.ipynb
ex04_dashboard/.streamlit/: secrets.toml
ex05_ml_prediction_service/: app_taxi.py  test.py  tmp.ipynb  train.py
notebooks/: 1.0-VA-data-exploration.ipynb  2.0-VA-features-exploration-ML.ipynb
