[project]
name = "projet-big-data-cytech-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flake8>=7.3.0",
    "folium>=0.20.0",
    "fsspec>=2026.2.0",
    "geopandas>=1.1.2",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "s3fs>=2026.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.54.0",
    "streamlit-folium>=0.26.1",
    "xgboost>=3.2.0",
]
